--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,25 +10,25 @@
 </head>
 <body>
 <div class="container">
-    <form action="" id="form">
+    <form id="form">
         <div class="input-group">
             <label for="nome">Nome</label>
             <input type="text" class="not-null" placeholder="Nome" id="nome" name="nome">
         </div>
         <div class="input-group">
             <label for="email">E-mail</label>
-            <input type="text"  class="not-null" placeholder="E-mail" id="email" name="email">
+            <input type="text" class="not-null" placeholder="E-mail" id="email" name="email">
         </div>
         <div class="input-group">
             <label for="CPF">CPF</label>
-            <input type="text"  class="not-null" placeholder="CPF" id="cpf" name="cpf">
+            <input type="text" class="not-null" placeholder="CPF" id="cpf" name="cpf">
         </div>
         <div class="input-group">
             <label for="CEP">CEP</label>
-            <input type="text"  class="not-null" placeholder="CEP" id="cep" name="cep">
+            <input type="text" class="not-null" placeholder="CEP" id="cep" name="cep">
         </div>
 
-         <div class="address">
+        <div class="address">
             <div class="input-group">
                 <label for="rua">Rua</label>
                 <input type="text" id="rua" size="50">
@@ -47,10 +47,10 @@
             </div>
         </div>
         <div class="input-group">
-            <button>Cadastrar</button>
+            <button type="submit">Cadastrar</button>
         </div>
     </form>
-    <div id="mensagem"> </div>
+    <div id="mensagem"></div>
 </div>
 <script src="./js/form.js"></script>
 </body>
